# album

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  album-full.yml  album.yml  bonej-skeletonize.yml  docker_entrypoint.sh  environment.yaml  hips.yml  hips_full.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
_solutions/: radial-symmetry.md  sciview-volume-rendering.md
album/: __init__.py  __main__.py  argument_parsing.py
album/ci/: __main__.py  argument_parsing.py  commandline.py  zenodo_api.py
album/ci/controller/: release_manager.py  zenodo_manager.py
album/ci/utils/: ci_utils.py  deploy_environment.py
album/core/: __init__.py  commandline.py  server.py
album/core/concept/: database.py
album/core/controller/: catalog_handler.py  catalog_manager.py  clone_manager.py  collection_manager.py  conda_manager.py  deploy_manager.py  install_manager.py  migration_manager.py  remove_manager.py  resolve_manager.py  run_manager.py  search_manager.py  solution_handler.py  task_manager.py  test_manager.py
album/core/database/: catalog_collection_schema.sql  catalog_index_schema.sql
album/core/model/: album_base.py  catalog.py  catalog_collection.py  catalog_index.py  catalog_updates.py  collection_index.py  configuration.py  coordinates.py  default_values.py  environment.py  group_name_version.py  identity.py  log_handler.py  resolve_result.py  solution.py  solution_collection.py  solutions_db.py  task.py
album/core/utils/: script.py  subcommand.py
album/docker/: Dockerfile_solution_template.txt
album/extensions/blender/: __init__.py  server.py
ci/: __main__.py  ci_utils.py  pre_release.py  release.py
docker/: entrypoint-solution.sh
docs/: Plugins.md  README.md  catalog-admin.md  catalog-development.md  conf.py  contributing.md  development-guide.md  development-guide.rst  distributed.md  docker.md  index.md  index.rst  installation-instructions.md  installation.rst  package.md  python-api.md  quick-start.md  server.md  solution-development.md  solution-development.rst  troubleshooting.md  usage-instructions.md  usage-instructions.rst
docs/_static/: style.css
examples/: bonej_skeletonize.py  cellpose_prediction.py  nnUnet_prediction.py  radial_symmetry.py  sciview_volume_rendering.py
hips/: __init__.py  __main__.py  api.py  argument_parsing.py  cmdline.py  containerize.py  deploy.py  hips_base.py  install.py  public_api.py  remove.py  repl.py  run.py  search.py  tutorial.py
hips/api/: install_helper.py  run_helper.py
hips/ci/: __main__.py  ci_utils.py  pre_release.py  release.py  zenodo_api.py
hips/ci/controller/: release_manager.py
hips/ci/utils/: ci_utils.py  deploy_environment.py
hips/core/: __init__.py  add_catalog.py  catalog.py  commandline.py  containerize.py  deploy.py  install.py  remove.py  remove_catalog.py  repl.py  run.py  search.py  server.py  tutorial.py
hips/core/concept/: singleton.py
hips/core/controller/: catalog_manager.py  conda_manager.py  deploy_manager.py  install_manager.py  remove_manager.py  resolve_manager.py  run_manager.py  search_manager.py  test_manager.py
hips_ci_tools/: __main__.py  ci_pre_release.py  ci_release.py  ci_utils.py
hips_utils/: environment.py  hips_catalog.py  hips_configuration.py  hips_logging.py  hips_resolve.py  hips_script.py  subcommand.py
hips_utils/operations/: file_operations.py  git_operations.py  url_operations.py
install_helper/: modules.py
scripts/: setup_env.sh
src/album/: __init__.py  __main__.py  album.py  api.py  argument_parsing.py  commandline.py  runner  server.py
test/: __main__.py  global_exception_watcher.py  run_all.py  test_common.py  test_hips_common.py
test/catalog_path/: album_catalog_index.db
test/hips/: test__init__.py  test_cmdline.py  test_install.py  test_run.py
test/install_helper/: test_modules.py
test/integration/: run_all_integration.py  run_all_integration_micromamba.py  run_integration_conda.py  test_hips_cmdline.py  test_integration_api.py  test_integration_catalog_features.py  test_integration_cmdline.py  test_integration_commandline.py  test_integration_common.py  test_integration_containerize.py  test_integration_core_common.py  test_integration_deploy.py  test_integration_install.py  test_integration_remove.py  test_integration_repl.py  test_integration_resource_api_version.py  test_integration_run.py  test_integration_search.py  test_integration_server.py  test_integration_test.py  test_integration_tutorial.py
test/resources/: _build_resource_files.py  app1-alternative.py  app1.py  app2.py  dummysolution.py  hips_with_steps.py  hips_with_steps_grouped.py  s2.py  s2_app.py  s3.py  s3_noparent.py  s3_steps.py  s3_steps_grouped.py  solution0_dummy.py  solution0_dummy_no_doi.py  solution0_dummy_no_routines.py  solution10_uninstall.py  solution11_changed_group.py  solution11_changed_version.py  solution11_minimal.py  solution11_version3.py  solution12_solution1_app1.py  solution13_faulty_routine.py  solution13_faulty_routine_fixed.py  solution14_faulty_environment.py  solution15_album_running_faulty_solution.py  solution16_documentation.py  solution17_schema0.py  solution18_uninstall_faulty.py  solution19_latest_API_with_outdated_parent.py  solution19_outdated_parent.py  solution1_app1.py  solution1_app1_changed_parent.py  solution1_app1_nonexisting_parent.py  solution21_backwards_compatibility.py  solution21_backwards_compatibility_parent.py  solution21_backwards_compatibility_with_parent.py  solution2_app1.py  solution3_noparent.py  solution4_app2.py  (+9 more)
test/unit/: run_all_unit.py  run_all_unit_conda.py  run_all_unit_conda_with_mamba.py  run_all_unit_micromamba.py  run_unit_solo_conda.py  test_argument_parsing.py  test_common.py  test_server.py  test_unit_common.py  test_unit_core_common.py
test/utils/: test_environment.py  test_hips_logging.py  test_zenodo_api.py
utils/: copy_argparse.py  environment.py  file_operations.py  git_operations.py  hips_logging.py  hips_resolve.py  hips_script.py  subcommand.py  zenodo_api.py
(+336 files in other folders)
