[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "album"
version = "0.12.1"
authors = [
    {name = "Kyle Harrington", email = "album@kyleharrington.com"},
    {name = "Jan Philipp Albrecht", email = "j.p.albrecht@fu-berlin.de"},
    {name = "Deborah Schmidt", email = "mail@frauzufall.de"}
]
maintainers = [
    {name = "Kyle Harrington", email = "album@kyleharrington.com"},
    {name = "Jan Philipp Albrecht", email = "j.p.albrecht@fu-berlin.de"},
    {name = "Deborah Schmidt", email = "mail@frauzufall.de"}
]
description = "Album is a framework for unifying computational tools across frameworks, languages, and environments."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["virtual environments", "imaging", "data analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities"
]
requires-python = "~=3.10"
dependencies = [
    "album-solution-api>=0.7.0,<0.8.0",
    "album-environments>=0.3.0,<0.4.0",
    "pyyaml>=5.4.1",
    "validators>=0.18.2",
    "gitpython>=3.1.13",
    "requests>=2.25.1",
    "pexpect>=4.8.0",
    "jsonschema>=4.0.0",
    "colorlog>=6.6.0",
    'pywin32>=303 ; platform_system== "Windows"',
    "packaging>=21.3",
    "pre-commit>=2.20.0",
    "pooch>=1.4.0",
]


[project.urls]
Documentation = "https://docs.album.solutions/en/latest/"
Homepage = "https://album.solutions/"
DeveloperDocumentation = "https://gitlab.com/album-app/album/-/wikis/home"
Repository = "https://gitlab.com/album-app/album"
Tracker= "https://gitlab.com/album-app/album/-/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ['*.sql', '*.json', '*LICENSE']

[project.scripts]
album = "album.__main__:startup"
album-catalog-admin = "album.ci.__main__:startup"

[project.entry-points."console_parsers_album"]
run="album.argument_parsing:create_run_parser"
search="album.argument_parsing:create_search_parser"
repl="album.argument_parsing:create_repl_parser"
deploy="album.argument_parsing:create_deploy_parser"
install="album.argument_parsing:create_install_parser"
uninstall="album.argument_parsing:create_uninstall_parser"
info="album.argument_parsing:create_info_parser"
add_catalog="album.argument_parsing:create_add_catalog_parser"
remove_catalog="album.argument_parsing:create_remove_catalog_parser"
update="album.argument_parsing:create_update_parser"
upgrade="album.argument_parsing:create_upgrade_parser"
clone="album.argument_parsing:create_clone_parser"
index="album.argument_parsing:create_index_parser"
test="album.argument_parsing:create_test_parser"
undeploy="album.argument_parsing:create_undeploy_parser"
