[metadata]
name = hips
version = 0.1.0
description = Helmholtz Imaging Platform Solutions framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/ida-mdc/hips
author = Kyle Harrington, and others
maintainer = Kyle Harrington, and others
maintainer_email = hip@kyleharrington.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Framework :: hips
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = virtual, environments, imaging
project_urls =
    Source=https://gitlab.com/ida-mdc/hips
    Tracker=https://gitlab.com/ida-mdc/hips/issues

[options]
packages = find:
install_requires =                 
    pyyaml>=5.4.1
    validators>=0.18.2
    gitpython>=3.1.13
    xdg>=5.0.1
    acora>=2.2
    anytree>=2.8.0
    requests>=2.25.1
python_requires = >=3.6

[options.entry_points]
console_scripts =
    hips=hips.cmdline:main

