[metadata]
name = album
version = 0.1.0
description = album is a tool for unifying computational tools across frameworks, languages, and environments 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/album-app/album
author = Kyle Harrington, Jan Philipp Albrecht, Deborah Schmidt
maintainer = Kyle Harrington, Jan Philipp Albrecht, Deborah Schmidt
maintainer_email = album@kyleharrington.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = virtual, environments, imaging, data analysis
project_urls =
    Source=https://gitlab.com/album-app/album
    Tracker=https://gitlab.com/album-app/album/issues

[options]
packages = find:
install_requires =                 
    pyyaml>=5.4.1
    validators>=0.18.2
    gitpython>=3.1.13
    anytree>=2.8.0
    requests>=2.25.1
    pexpect>=4.8.0
    flask>=2.0.1
    flask-unittest>=0.1.2
    album-runner @ https://gitlab.com/album-app/album-runner/-/archive/59e8a5872ae8bbdc6023e0bbdd5d434e9a5d57d3/album-runner-59e8a5872ae8bbdc6023e0bbdd5d434e9a5d57d3.zip
    appdirs>=1.4.4
python_requires = >=3.6

[options.entry_points]
console_scripts =
    album=album.__main__:startup

