[metadata]
name = album
version = 0.6.2
description = album is a tool for unifying computational tools across frameworks, languages, and environments 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/album-app/album
author = Kyle Harrington, Jan Philipp Albrecht, Deborah Schmidt
maintainer = Kyle Harrington, Jan Philipp Albrecht, Deborah Schmidt
maintainer_email = album@kyleharrington.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = virtual, environments, imaging, data analysis
project_urls =
    Source=https://gitlab.com/album-app/album
    Tracker=https://gitlab.com/album-app/album/issues

[options]
package_dir =
    =src
packages = find_namespace:
include_package_data = True
install_requires =
    pyyaml>=5.4.1
    validators>=0.18.2
    gitpython>=3.1.13
    requests>=2.25.1
    pexpect>=4.8.0
    album-runner==0.3.1
    jsonschema>=4.0.0
    keepachangelog>=1.0.0
    colorlog>=6.6.0
    pylnk3>=0.4.2
python_requires = >=3.7

[options.package_data]
* = *.txt, *.rst, *.sh, *.sql, *.json

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    album=album.__main__:startup
    album-catalog-admin=album.ci.__main__:startup
console_parsers_album =
    run=album.argument_parsing:create_run_parser
    search=album.argument_parsing:create_search_parser
    repl=album.argument_parsing:create_repl_parser
    deploy=album.argument_parsing:create_deploy_parser
    install=album.argument_parsing:create_install_parser
    uninstall=album.argument_parsing:create_uninstall_parser
    info=album.argument_parsing:create_info_parser
    add_catalog=album.argument_parsing:create_add_catalog_parser
    remove_catalog=album.argument_parsing:create_remove_catalog_parser
    update=album.argument_parsing:create_update_parser
    upgrade=album.argument_parsing:create_upgrade_parser
    clone=album.argument_parsing:create_clone_parser
    index=album.argument_parsing:create_index_parser
    test=album.argument_parsing:create_test_parser
    undeploy=album.argument_parsing:create_undeploy_parser
